# BOT_PMU

./: .env.example  .gitignore  .vercelignore  admin.html  admin.js  analyser_course.py  api_pmu.py  api_velora_communaute.json  api_velora_matchs.json  api_velora_matchs_tennis.json  api_velora_premium.json  archives_common.py  auth.js  config.example.js  database.py  database_sqlite.py  database_supabase.py  dump_winamax_html.json  index.html  landing.html  legales.html  manifest.json  package-lock.json  package.json  parser_winamax.py  parser_winamax_tennis.py  publish_communaute.py  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  robots.txt  run_all.py  sitemap.xml  stats_foot.py  stats_pmu.py  sw.js  velora_archiver_foot.py  velora_billing.py  velora_finance.py  (+6 more)
web/: .env.example  .vercelignore  __init__.py  admin.js  analyser_course.py  api_pmu.py  api_velora_communaute.json  api_velora_matchs.json  api_velora_matchs_tennis.json  api_velora_premium.json  archives_common.py  auth.js  config.example.js  database_supabase.py  foot_archive_stats.py  foot_results_fallback.py  foot_results_scraper.py  foot_scores_reference.py  foot_team_fuzzy.py  index.html  landing.html  legales.html  pmu_rapports_definitifs.py  publish_communaute.py  pyproject.toml  requirements.txt  resolver_pmu_archives.py  resolver_scores_foot.py  sitemap.xml  stats_foot.py  stats_pmu.py  sw.js  velora_archiver_foot.py  velora_archives_foot.json  velora_billing.py  velora_finance.py  velora_foot_calibration.json  velora_foot_resultats.json  velora_odds_history.json  (+4 more)
(+66 files in other folders)
