# Si la racine Vercel du projet est le dossier web/ (BOT_PMU), ce fichier est utilisé.
# Si la racine est le dépôt entier, c'est ../pyproject.toml qui s'applique (web.api_pmu:app).

[project]
name = "velora-web"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "supabase>=2.4.0",
    "stripe>=8.0.0",
]

[tool.vercel]
entrypoint = "api_pmu:app"

[tool.vercel.scripts]
build = "node scripts/vercel-build-static.js"
